--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 SCRIPTS/
 /PROJECT/LAB4/LAB4_empty/my_net/__pycache__/
 /PROJECT/LAB4/images/
+/PROJECT/LAB4/images_bonus/
 *.pth
+*.onnx
+*.onnx.data
