--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ SCRIPTS/
 /PROJECT/LAB4/images_bonus/
 /PROJECT/Report/train
 /PROJECT/Report/test
+/PROJECT/si100b
 *.yml
 *.pth
 *.onnx
 *.onnx.data
+.DS_Store
+**/.DS_Store
